# rteb

./: .gitignore  README.md  duplicate_models_for_aliasing.json  model_meta_info.json  pyproject.toml
ebr/: __main__.py  retrieve.py
ebr/core/: encoder.py
ebr/datasets/: text.py
ebr/models/: bgem3.py  openai.py
results/: datasets.json  models.json  results.json
